--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -135,24 +135,36 @@
             </LinearLayout>
         </LinearLayout>
 
-        <ScrollView
+        <LinearLayout
+            android:id="@+id/warningLayout"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="24dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
+            android:orientation="vertical"
             android:background="@drawable/border_warning_text">
-
             <TextView
-                android:id="@+id/warningtext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Avvisi dispensa"
+                android:text="Prodotti in scadenza"
                 android:padding="10dp"
                 android:textSize="16dp"
                 android:textColor="#000000"
-                android:clickable="false" />
-        </ScrollView>
+                android:clickable="false"
+                android:gravity="center"
+                android:fontFamily="@font/funneldisplay_bold"/>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:id="@+id/warningContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp"/>
+            </ScrollView>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
