--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -7,9 +7,47 @@
     <FrameLayout
         android:id="@+id/horizontal_menu"
         android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"/>
 
+    <LinearLayout
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/horizontal_menu"
+        android:layout_toRightOf="@id/vertical_menu"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:gravity="center_vertical">
+
+        <EditText
+            android:id="@+id/search_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Cerca un prodotto"
+            android:background="@drawable/rounded_background_search"
+            android:padding="8dp"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:id="@+id/search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/rounded_background"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/search2"
+                android:gravity="center" />
+        </LinearLayout>
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/vertical_menu"
         android:layout_width="wrap_content"
@@ -21,7 +59,7 @@
         android:id="@+id/item_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/horizontal_menu"
+        android:layout_below="@id/search_bar"
         android:layout_toRightOf="@id/vertical_menu"
         android:layout_alignParentBottom="true"
         android:padding="8dp"
@@ -35,7 +73,7 @@
         android:gravity="center"
         android:layout_gravity="end"
         android:onClick="addElement"
-        android:background="@drawable/rounded_background"
+        android:background="@drawable/rounded_background_accent"
         android:padding="8dp"
         android:layout_margin="8dp"
         android:layout_alignParentEnd="true"
