--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -51,7 +51,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:background="@drawable/rounded_background"
+                android:background="@drawable/brown_border"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:text="Lista della spesa"
                     android:textSize="35dp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black" />
             </LinearLayout>
         </LinearLayout>
 
@@ -85,7 +85,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/rounded_background"
+                android:background="@drawable/brown_border"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:paddingStart="10dp"
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Dispensa"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="35dp" />
             </LinearLayout>
         </LinearLayout>
@@ -121,7 +121,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:background="@drawable/rounded_background"
+                android:background="@drawable/brown_border"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
@@ -131,7 +131,7 @@
                     android:layout_height="wrap_content"
                     android:text="Valigia"
                     android:textSize="35dp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black" />
             </LinearLayout>
         </LinearLayout>
 
