Fix grafici bottoni

--- a/app/src/main/res/drawable/menu_buttons.xml
+++ b/app/src/main/res/drawable/menu_buttons.xml
@@ -1,6 +1,20 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
+            <solid android:color="@color/accentBrown" />
+        </shape>
+    </item>
+
+    <item android:gravity="right">
+        <shape android:shape="rectangle">
+            <size android:width="2dp" />
+            <solid android:color="@color/brown" />
+        </shape>
+    </item>
+
+    <item android:gravity="left">
+        <shape android:shape="rectangle">
+            <size android:width="2dp" />
             <solid android:color="@color/brown" />
         </shape>
     </item>
@@ -8,7 +22,7 @@
     <item android:gravity="bottom">
         <shape android:shape="rectangle">
             <size android:height="2dp" />
-            <solid android:color="@color/lightBrown" />
+            <solid android:color="@color/brown" />
         </shape>
     </item>
 </layer-list>
