--- a/app/src/main/res/drawable/border_warning_text.xml
+++ b/app/src/main/res/drawable/border_warning_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFF8EC"/>
-    <stroke android:width="5dp" android:color="#B17227"/>
+    <stroke android:width="3dp" android:color="@color/brown"/>
     <corners android:radius="6dp"/>
 </shape>
