--- a/app/src/main/res/drawable/menu_buttons_selected.xml
+++ b/app/src/main/res/drawable/menu_buttons_selected.xml
@@ -1,14 +1,28 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#D78A32" />
+            <solid android:color="#F8D49F" />
+        </shape>
+    </item>
+
+    <item android:gravity="right">
+        <shape android:shape="rectangle">
+            <size android:width="2dp" />
+            <solid android:color="@color/brown" />
+        </shape>
+    </item>
+
+    <item android:gravity="left">
+        <shape android:shape="rectangle">
+            <size android:width="2dp" />
+            <solid android:color="@color/brown" />
         </shape>
     </item>
 
     <item android:gravity="bottom">
         <shape android:shape="rectangle">
             <size android:height="2dp" />
-            <solid android:color="@color/lightBrown" />
+            <solid android:color="@color/brown" />
         </shape>
     </item>
 </layer-list>
