--- a/app/src/main/res/drawable/rounded_background_accent.xml
+++ b/app/src/main/res/drawable/rounded_background_accent.xml
@@ -1,4 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/orange"/>
+    <solid android:color="#F6944B"/>
     <corners android:radius="16dp"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/orange" />
 </shape>
