--- a/app/src/main/res/layout/shopping_list_layout.xml
+++ b/app/src/main/res/layout/shopping_list_layout.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:background="@drawable/brown_border"
+            android:background="@drawable/brown_border_round"
             android:orientation="horizontal"
             android:gravity="center"
             android:paddingRight="10dp"
@@ -100,7 +100,7 @@
         android:gravity="center"
         android:layout_gravity="end"
         android:onClick="addElement"
-        android:background="@drawable/rounded_background"
+        android:background="@drawable/brown_border_accent_round"
         android:padding="8dp"
         android:layout_margin="8dp"
         android:layout_alignParentEnd="true"
@@ -111,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="25sp"
             android:fontFamily="@font/funneldisplay_bold"
             android:gravity="center" />
