--- a/app/src/main/res/layout/vertical_menu.xml
+++ b/app/src/main/res/layout/vertical_menu.xml
@@ -4,7 +4,7 @@
     android:layout_weight="0.1"
     android:orientation="vertical"
     android:gravity="start"
-    android:background="@color/brown">
+    android:background="@drawable/brown_border">
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -23,18 +23,18 @@
         android:id="@+id/addCategory"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="vertical"
+        android:background="@drawable/brown_border_accent"
         android:gravity="center"
-        android:background="@drawable/add_category_button"
         android:onClick="addSuitcaseCategory"
+        android:orientation="vertical"
         android:padding="0dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/funneldisplay_bold"
             android:text="+"
-            android:textSize="25sp"
-            android:textColor="@color/dark_white"
-            android:fontFamily="@font/funneldisplay_bold"/>
+            android:textColor="@color/black"
+            android:textSize="25sp" />
     </LinearLayout>
 </LinearLayout>
