--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -40,7 +40,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/paperscaled"
+                android:src="@drawable/logo"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="5dp"/>
 
@@ -74,7 +74,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/fridgescaled"
+                android:src="@drawable/logo_background"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="5dp"/>
 
@@ -108,7 +108,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/suitcasescaled"
+                android:src="@drawable/logo_background2"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="5dp"/>
 
