Fix backstack, aggiunta categorie, grafica barra di ricerca, fix popup aggiunta categorie

--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColorHint="#A9A69E"
             android:hint="Cerca un prodotto"
             android:background="@drawable/rounded_background_search"
             android:padding="8dp"
