--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="white">#FDF9F1</color>
     <color name="dark_white">#DED7CC</color>
     <color name="brown">#B17227</color>
+    <color name="darkBrown">#945D24</color>
+    <color name="darkerBrown">#6F430A</color>
     <color name="beige">#F2B85B</color>
     <color name="lightBrown">#FBD39D</color>
     <color name="orange">#E47621</color>
