--- a/app/src/main/res/layout/suitcase_layout.xml
+++ b/app/src/main/res/layout/suitcase_layout.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColorHint="#A9A69E"
             android:hint="Cerca un prodotto"
             android:background="@drawable/rounded_background_search"
             android:padding="8dp"
