--- a/app/src/main/res/layout/shoppinglist_item_adder.xml
+++ b/app/src/main/res/layout/shoppinglist_item_adder.xml
@@ -139,7 +139,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Aggiungi Prodotto"
-                    android:textColor="@color/lightBrown"
+                    android:textColor="@color/white"
                     android:fontFamily="sans-serif-condensed-medium"
                     android:textSize="25dp" />
 
