--- a/app/src/main/res/layout/pantry_item_adder.xml
+++ b/app/src/main/res/layout/pantry_item_adder.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Inserisci un prodotto per la tua dispensa"
-                android:textSize="30dp"
+                android:textSize="26dp"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:textColor="@color/black" />
 
@@ -54,7 +54,7 @@
                 android:id="@+id/spinnerCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/brown"
+                android:textColor="@color/black"
                 android:textColorHint="#8E6062"
                 android:fontFamily="sans-serif-condensed"
                 android:layout_marginTop="15dp" />
@@ -100,7 +100,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/rounded_background"
+                    android:background="@drawable/brown_border_accent_round"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -130,7 +130,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="20dp"
-                    android:background="@drawable/rounded_background"
+                    android:background="@drawable/brown_border_accent_round"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -149,7 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="25dp"
-                android:background="@drawable/rounded_background"
+                android:background="@drawable/brown_border_accent_round"
                 android:gravity="center"
                 android:padding="12dp"
                 android:orientation="horizontal">
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Aggiungi Prodotto"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:fontFamily="sans-serif-condensed-medium"
                     android:textSize="25dp" />
 
