--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -2,8 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/white"
-    android:background="@color/brown"
+    android:textColor="@color/black"
+    android:background="@color/accent2"
     android:padding="10dp"
     android:textSize="16sp"
     android:fontFamily="sans-serif-condensed"/>
