--- a/app/src/main/res/layout/pantry_item_adder.xml
+++ b/app/src/main/res/layout/pantry_item_adder.xml
@@ -97,10 +97,10 @@
 
                 <LinearLayout
                     android:id="@+id/buttonDecreaseQuantity"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/brown_border_accent_round"
+                    android:background="@drawable/round_buttons"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -108,7 +108,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-"
-                        android:textSize="35dp"
+                        android:textSize="30dp"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -127,10 +127,10 @@
 
                 <LinearLayout
                     android:id="@+id/buttonIncreaseQuantity"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="20dp"
-                    android:background="@drawable/brown_border_accent_round"
+                    android:background="@drawable/round_buttons"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -138,7 +138,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="+"
-                        android:textSize="35dp"
+                        android:textSize="30dp"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
