--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/black"
-    android:background="@color/accent2"
+    android:background="@color/accentBrown"
     android:padding="10dp"
     android:textSize="16sp"
     android:fontFamily="sans-serif-condensed"/>
