--- a/app/src/main/res/layout/shopping_item_layout.xml
+++ b/app/src/main/res/layout/shopping_item_layout.xml
@@ -40,9 +40,9 @@
 
         <LinearLayout
             android:id="@+id/decrementButton"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/rounded_background"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/round_buttons"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -50,8 +50,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="-"
-                android:textSize="20sp"
-                android:textColor="@color/white" />
+                android:textSize="15sp"
+                android:textColor="@color/black" />
 
         </LinearLayout>
 
@@ -63,14 +63,14 @@
             android:text="0"
             android:textSize="16sp"
             android:textColor="@color/black"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"/>
 
         <LinearLayout
             android:id="@+id/incrementButton"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/rounded_background"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/round_buttons"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -78,9 +78,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+"
-                android:textSize="20sp"
-                android:textColor="@color/white"
-                android:layout_marginBottom="5dp"/>
+                android:textSize="15sp"
+                android:textColor="@color/black" />
 
         </LinearLayout>
 
