--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.FarFromHome" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="buttonStyle">@style/DefaultButtonStyle</item>
+        <item name="android:statusBarColor">@color/brown</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="DefaultButtonStyle" parent="Widget.AppCompat.Button">
