--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.FarFromHome" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="buttonStyle">@style/DefaultButtonStyle</item>
+        <item name="android:statusBarColor">@color/brown</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
-
     <style name="DefaultButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/rounded_background</item>
         <item name="android:textColor">@color/black</item>
