--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -103,7 +103,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/suitcasescaled"
+                android:src="@drawable/logo_suitcase"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="5dp"/>
 
