--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -69,7 +69,7 @@
 
     <LinearLayout
         android:id="@+id/addItemButton"
-        android:layout_width="90dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/funneldisplay_bold"
             android:gravity="center"
-            android:text="+"
+            android:text="Aggiungi un elemento"
             android:textColor="@color/black"
             android:textSize="25sp" />
     </LinearLayout>
