--- a/app/src/main/res/layout/suitcase_layout.xml
+++ b/app/src/main/res/layout/suitcase_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -57,18 +58,48 @@
                 android:gravity="center" />
         </LinearLayout>
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/suitcaseItemList"
+    <ScrollView
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_below="@id/search_bar"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="-2dp"
-        android:layout_marginBottom="56dp"
         android:layout_toRightOf="@id/vertical_menu"
-        android:padding="8dp" />
+        android:layout_marginBottom="70dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <FrameLayout
+                android:id="@+id/suitcaseItemList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="-2dp"
+                android:layout_marginBottom="3dp"
+                android:padding="8dp" />
+
+            <LinearLayout
+                android:id="@+id/addItemButton"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:layout_margin="2dp"
+                android:background="@drawable/brown_border_accent_round"
+                android:gravity="center"
+                android:onClick="addElement"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/funneldisplay_bold"
+                    android:gravity="center"
+                    android:text="Aggiungi un elemento"
+                    android:textColor="@color/black"
+                    android:textSize="25sp" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/suitcaseDone"
@@ -81,7 +112,7 @@
         android:background="@drawable/rounded_background_accent"
         android:padding="8dp"
         android:layout_margin="8dp"
-        android:layout_toLeftOf="@id/addItemButton"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         >
 
@@ -95,28 +126,4 @@
             android:gravity="center" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/addItemButton"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_gravity="end"
-        android:onClick="addElement"
-        android:background="@drawable/brown_border_accent_round"
-        android:padding="8dp"
-        android:layout_margin="8dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+"
-            android:textColor="@color/black"
-            android:textSize="25sp"
-            android:fontFamily="@font/funneldisplay_bold"
-            android:gravity="center" />
-    </LinearLayout>
 </RelativeLayout>
