--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -32,22 +32,24 @@
             android:gravity="center_vertical"
             android:layout_marginBottom="50dp">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/paperscaled"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="5dp"/>
+
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:background="@drawable/brown_border_round"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/paperscaled"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="5dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -66,12 +68,7 @@
             android:gravity="center_vertical"
             android:layout_marginBottom="50dp">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/fridgescaled"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="5dp"/>
+
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -79,9 +76,16 @@
                 android:layout_weight="1"
                 android:background="@drawable/brown_border_round"
                 android:gravity="center_vertical"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/fridgescaled"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="5dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -100,22 +104,22 @@
             android:gravity="center_vertical"
             android:layout_marginBottom="50dp">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/logo_suitcase"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="5dp"/>
-
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:background="@drawable/brown_border_round"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/suitcasescaled"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="5dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
