--- a/app/src/main/res/layout/horizontal_menu.xml
+++ b/app/src/main/res/layout/horizontal_menu.xml
@@ -5,47 +5,41 @@
     android:layout_height="150px"
     android:layout_weight="0.1"
     android:orientation="horizontal"
-    android:gravity="start"
+    android:gravity="center"
     android:background="@color/brown">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_margin="8dp">
-
-        <ImageView
-            android:id="@+id/homeImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="goToHome"
-            android:src="@drawable/home_icon" />
-
-        <ImageView
-            android:id="@+id/shopImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/shopping_cart" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/homeImage"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="goToHome"
+        android:src="@drawable/home_icon" />
 
     <TextView
         android:id="@+id/activityTitle"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:maxWidth="80dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:fontFamily="@font/funneldisplay_medium"
-        android:gravity="end"
-        android:layout_marginEnd="10dp"
-        android:layout_gravity="center_vertical"
+        android:gravity="center"
+        android:layout_marginBottom="5dp"
         android:textSize="50sp"
         android:text="TextView"
         android:textColor="@color/black"
         android:layout_marginTop="5dp"/>
+
+    <ImageView
+        android:id="@+id/shopImage"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/shopping_cart" />
 </LinearLayout>
