--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="CustomSpinnerStyle" parent="Widget.AppCompat.Spinner">
-        <item name="android:backgroundTint">@color/beige</item>
+        <item name="android:backgroundTint">@color/black</item>
         <item name="android:popupBackground">@color/white</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:tint">@color/black</item>
     </style>
-
 
 </resources>
