--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,17 @@
 <resources>
     <style name="CustomSpinnerStyle" parent="Widget.AppCompat.Spinner">
         <item name="android:backgroundTint">@color/black</item>
-        <item name="android:popupBackground">@color/white</item>
+        <item name="android:popupBackground">@color/black</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:tint">@color/black</item>
     </style>
+
+    <style name="CustomDatePickerDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowBackground">@color/lightBrown</item>
+        <item name="android:colorBackground">@color/brown</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:colorAccent">@color/brown</item>
+    </style>
+
 
 </resources>
