--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -8,6 +8,17 @@
     tools:context=".HomeActivity">
 
     <ImageView
+        android:id="@+id/notification_icon"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/notification"/>
+
+
+    <ImageView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="129dp"
