--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -17,6 +17,15 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/notification"/>
 
+    <ImageView
+        android:id="@+id/trash_icon"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/trash_can"/>
 
     <ImageView
         android:id="@+id/title"
