--- a/app/src/main/res/layout/pantry_item_adder.xml
+++ b/app/src/main/res/layout/pantry_item_adder.xml
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Inserisci un prodottoa"
+                android:text="Inserisci un prodotto"
                 android:textSize="26dp"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:textColor="@color/black" />
